--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -8,3 +8,5 @@ fixtures:
       ref: "1.6.0"
     augeasproviders_ssh: "herculesteam/augeasproviders_ssh"
     augeasproviders_core: "herculesteam/augeasproviders_core"
+    rbac: "pltraining/rbac"
+
